Fixed pagination and filter divs on small screens

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1140,7 +1140,6 @@ button.vjs-play-control.vjs-control.vjs-button {
 	width: 15px;
 }
 .pagination-container {
-	width: 300px; /* Set the width of the container */
 	margin: 2rem auto;
 	border-radius: 0.2rem;
 	text-align: center;
@@ -1217,11 +1216,50 @@ li.text-only {
 	justify-content: space-between;
 	align-items: flex-end;
 }
+@media only screen and (max-width: 645px) {
+	.browse-filter-container {
+		flex-direction: column;
+		align-items: flex-start;
+	}
 
+	.filter-container {
+		flex-direction: column;
+		align-items: flex-start !important;
+	}
+}
+@media only screen and (max-width: 430px) {
+	.browse-filter-container {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.filter-container {
+		flex-direction: column;
+		align-items: flex-start !important;
+	}
+	.filter-group-sort {
+		flex-direction: column !important;
+		align-items: flex-start !important;
+	}
+	.filter-group-last {
+		margin-left: 60px;
+	}
+}
 .filter-container {
 	display: flex;
 	align-items: center;
 	margin-bottom: 20px;
+}
+.filter-group, .filter-group-sort {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+} {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 }
 .filter-text {
 	text-transform: uppercase;
